--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,10 +1,16 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
 
+#monitor=desc:AU Optronics 0x32EB,1920x1080,auto,1
+monitor=eDP-1,disable
+
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
+exec-once = mako
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = hlel
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
