--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -72,7 +72,7 @@ animations {
 master {
     new_status = master
     orientation = center
-    inherit_fullscreen = false
+    inherit_fullscreen = true
     special_scale_factor = 1.0
     mfact = 0.55
 }
@@ -119,7 +119,10 @@ bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, Return, layoutmsg, focusmaster master
 bind = $mainMod SHIFT, Return, layoutmsg, swapwithmaster master
 # bind = $mainMod, down, layoutmsg, orientationcycle right left center
-bind = SUPER, Tab, workspace, previous
+bind = $mainMod, Tab, workspace, previous
+# bind = $mainMod, Tab, workspace, previous
+bind = $mainMod SHIFT, Tab, cyclenext,
+bind = $mainMod SHIFT, Tab, bringactivetotop,
 
 ### Resize ###
 bind = $mainMod, E, submap, resize
