--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,3 +1,5 @@
+# TODO Figure out tab groups
+
 #### Monitors ####
 source = ~/.config/hypr/monitors.conf
 monitor=,preferred,auto,auto
@@ -55,7 +57,7 @@ decoration {
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = true
+    enabled = false
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
@@ -71,7 +73,7 @@ animations {
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
     new_status = master
-    orientation = center
+    orientation = right
     inherit_fullscreen = true
     special_scale_factor = 1.0
     mfact = 0.55
