--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,10 +3,12 @@ bold_font               JetBrainsMono Nerd Font
 italic_font             JetBrainsMono Nerd Font
 bold_italic_font        JetBrainsMono Nerd Font
 
-font_size               12.0
+font_size               15.0
 
 adjust_line_height      4
 disable_ligatures always
+
+background_opacity 0.90
 
 map cmd+equal change_font_size  all +1.0
 map cmd+minus change_font_size  all -1.0
