Fix term colors with alacritty

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,10 @@ set -g renumber-windows on    # renumber windows when a window is closed
 
 set -g set-titles on          # set terminal title
 
+set -g default-terminal "$TERM" # Tell tmux to use 256-color internally
+# Allow tmux to send 256-color to its "parent terminal", allowing the terminal to render colors in full.
+set-option -ga terminal-overrides ",$TERM:Tc"
+
 set -g display-panes-time 800 # slightly longer pane indicators display time
 set -g display-time 1000      # slightly longer status messages display time
 
