Make alacritty the default terminal

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,7 +5,7 @@ source = ~/.config/hypr/monitors.conf
 monitor=,preferred,auto,auto
 
 ### PROGRAMS ###
-$terminal = kitty
+$terminal = alacritty
 $fileManager = dolphin
 $menu = wofi --show drun
 
