--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,21 +2,17 @@
 
 #### Monitors ####
 source = ~/.config/hypr/monitors.conf
-monitor=,preferred,auto,auto
 
 ### PROGRAMS ###
-$terminal = alacritty
+$terminal = ghostty
 $fileManager = dolphin
 $menu = wofi --show drun
 
 ### AUTOSTART ###
 exec-once = mako # Notification daemon.
 exec-once = waybar
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 # Authentiaction agent.
+exec-once = systemctl --user hyprpolkitagent # Authentication agent for GUI
 
-### ENVIRONMENT VARIABLES ###
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
 
 ### LOOK AND FEEL ###
 # https://wiki.hyprland.org/Configuring/Variables/#general
@@ -24,50 +20,14 @@ general {
     gaps_in = 5
     gaps_out = 10
     border_size = 2
-    # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     layout = master
     resize_on_border = true
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#decoration
-decoration {
-    rounding = 10
-    # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 0.90
-    # Shadow
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
-    blur {
-        enabled = true
-        size = 16
-        passes = 2
-        ignore_opacity = true
-        
-        vibrancy = 0.1696
-        popups = true
-    }
-}
-
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
     enabled = false
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    animation = windows, 1, 1, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = windowsMove, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 0, 1, default
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
@@ -79,28 +39,6 @@ master {
     mfact = 0.55
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#misc
-misc { 
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
-}
-
-# https://wiki.hyprland.org/Configuring/Variables/#input
-input {
-    kb_layout = us
-    kb_options = altwin:swap_alt_win
-    follow_mouse = 2
-}
-
-group {
-    groupbar {
-        enabled = true
-    }
-}
-
-cursor {
-    inactive_timeout = 1
-}
 
 ####################
 ### KEYBINDINGSS ###
@@ -200,28 +138,3 @@ bindl=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindl=, XF86AudioPlay, exec, playerctl play-pause
 bindl=, XF86AudioPrev, exec, playerctl previous
 bindl=, XF86AudioNext, exec, playerctl next
-
-
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-
-### BIND Flags ###
-#  l -> locked, will also work when an input inhibitor (e.g. a lockscreen) is active.
-#  r -> release, will trigger on release of a key.
-#  e -> repeat, will repeat when held.
-#  n -> non-consuming, key/mouse events will be passed to the active window in addition to triggering the dispatcher.
-#  m -> mouse, see below.
-#  t -> transparent, cannot be shadowed by other binds.
-#  i -> ignore mods, will ignore modifiers.
-#  s -> separate, will arbitrarily combine keys between each mod/key, see [Keysym combos](#keysym-combos) above.
-#  d -> has description, will allow you to write a description for your bind.
-#  p -> bypasses the app's requests to inhibit keybinds.
-
