--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,7 +1,4 @@
-font_family             JetBrainsMono Nerd Font
-bold_font               JetBrainsMono Nerd Font
-italic_font             JetBrainsMono Nerd Font
-bold_italic_font        JetBrainsMono Nerd Font
+font_family             CaskaydiaMono Nerd Font Mono
 
 font_size               15.0
 
