--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,7 +11,7 @@ $menu = wofi --show drun
 ### AUTOSTART ###
 exec-once = mako # Notification daemon.
 exec-once = waybar
-exec-once = systemctl --user hyprpolkitagent # Authentication agent for GUI
+exec-once = systemctl --user start hyprpolkitagent # Authentication agent for GUI
 
 
 ### LOOK AND FEEL ###
@@ -132,9 +132,12 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-bindel=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindel=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindl=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindl=, XF86AudioPlay, exec, playerctl play-pause
-bindl=, XF86AudioPrev, exec, playerctl previous
-bindl=, XF86AudioNext, exec, playerctl next
+# Volume and Media Control
+bind = , XF86AudioRaiseVolume, exec, pamixer -i 5 
+bind = , XF86AudioLowerVolume, exec, pamixer -d 5 
+bind = , XF86AudioMicMute, exec, pamixer --default-source -m
+bind = , XF86AudioMute, exec, pamixer -t
+bind = , XF86AudioPlay, exec, playerctl play-pause
+bind = , XF86AudioPause, exec, playerctl play-pause
+bind = , XF86AudioNext, exec, playerctl next
+bind = , XF86AudioPrev, exec, playerctl previous
