Add basic hyprland configuration

--- a/.config/hypr/monitors.conf
+++ b/.config/hypr/monitors.conf
@@ -1,1 +1,6 @@
-monitor=HDMI-A-1,3440x1440@144,auto,1
+# The general config of a monitor looks like this:
+# monitor = name, resolution, position, scale, transform, 0
+
+monitor=desc:Samsung Electric Company LC34G55T HNTW600655,3440x1440@144,auto,1
+monitor=desc:BNQ BenQ PD2700U ET53N03984SL0,2560x1440@60,auto,1,transform,1
+
