--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,14 +4,17 @@
 source = ~/.config/hypr/monitors.conf
 
 ### PROGRAMS ###
-$terminal = ghostty
+$terminal = uwsm app -- kitty
 $fileManager = dolphin
 $menu = wofi --show drun
+$browser = setsid uwsm app -- brave
 
 ### AUTOSTART ###
-exec-once = mako # Notification daemon.
-exec-once = waybar
-exec-once = systemctl --user start hyprpolkitagent # Authentication agent for GUI
+exec-once = uwsm app -- mako # Notification daemon.
+exec-once = uwsm app -- waybar
+exec-once = systemctl --user start hyprpolkitagent # Authentication agent for GUIs
+exec-once = uwsm app -- swaybg -i ~/Pictures/wallpapers/current -m fill
+exec-once = uwsm app -- swayosd-server
 
 
 ### LOOK AND FEEL ###
@@ -19,26 +22,82 @@ exec-once = systemctl --user start hyprpolkitagent # Authentication agent for GU
 general { 
     gaps_in = 5
     gaps_out = 10
-    border_size = 2
+    border_size = 1
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     layout = master
-    resize_on_border = true
+    resize_on_border = false
+    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.inactive_border = rgba(595959aa)
+    allow_tearing = false
+}
+
+decoration {
+    rounding = 10
+    rounding_power = 4.0
+    active_opacity = 0.90
+    inactive_opacity = 0.80
+    dim_inactive = true
+    dim_strength = 0.2
+    dim_special = 0.2
+    blur {
+        popups = true 
+    } 
+    shadow {
+        enabled = true
+        range = 2
+        render_power = 3
+        color = rgba(1a1a1aee)
+    }
+    blur {
+        enabled = true
+        size = 8
+        passes = 1
+
+        vibrancy = 0.1696
+    }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = false
-}
+    enabled = true
+    bezier = overshoot, 0.05, 0.9, 0.1, 1.1
+
+    bezier = easeOutQuint,0.23,1,0.32,1
+    bezier = easeInOutCubic,0.65,0.05,0.36,1
+    bezier = linear,0,0,1,1
+    bezier = almostLinear,0.5,0.5,0.75,1.0
+    bezier = quick,0.15,0,0.1,1
+
+    animation = global, 1, 10, default
+    animation = border, 1, 5.39, easeOutQuint
+    animation = windows, 1, 4.79, easeOutQuint
+    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
+    animation = windowsOut, 1, 1.49, linear, popin 87%
+    animation = fadeIn, 1, 1.73, almostLinear
+    animation = fadeOut, 1, 1.46, almostLinear
+    animation = fade, 1, 3.03, quick
+    animation = layers, 1, 3.81, easeOutQuint
+    animation = layersIn, 1, 4, easeOutQuint, fade
+    animation = layersOut, 1, 1.5, linear, fade
+    animation = fadeLayersIn, 1, 1.79, almostLinear
+    animation = fadeLayersOut, 1, 1.39, almostLinear
+    animation = workspaces, 0,
+} 
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
     new_status = master
     orientation = right
-    inherit_fullscreen = true
     special_scale_factor = 1.0
     mfact = 0.55
+    slave_count_for_center_master = 0
 }
 
+misc {
+    disable_hyprland_logo = true
+    disable_splash_rendering  = true
+    focus_on_activate = true
+}
 
 ####################
 ### KEYBINDINGSS ###
@@ -50,28 +109,47 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
-bind = $mainMod, Q, killactive,
+bind = $mainMod, Q, killactive
 bind = $mainMod, F, fullscreen
+bindd = $mainMod, W, Toggle waybar, exec, pkill -SIGUSR1 waybar
+bindd = $mainMod, B, Browser, exec, $browser
+
+# Notifications
+bindd = SUPER, COMMA, Dismiss last notification, exec, makoctl dismiss
+bindd = SUPER SHIFT, COMMA, Dismiss all notifications, exec, makoctl dismiss --all
+bindd = SUPER CTRL, COMMA, Toggle silencing notifications, exec, makoctl mode -t do-not-disturb && makoctl mode | grep -q 'do-not-disturb' && notify-send "Silenced notifications" || notify-send "Enabled notifications"
+
 # bind = $mainMod SHIFT, Q, exit,
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, SPACE, exec, $menu
+# bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, P, exec, $menu
+# Master layout related bindings.
 bind = $mainMod, Return, layoutmsg, focusmaster master
 bind = $mainMod SHIFT, Return, layoutmsg, swapwithmaster master
-# bind = $mainMod, down, layoutmsg, orientationcycle right left center
-bind = $mainMod, Tab, workspace, previous
-# bind = $mainMod, Tab, workspace, previous
-bind = $mainMod SHIFT, Tab, cyclenext,
-bind = $mainMod SHIFT, Tab, bringactivetotop,
+bind = $mainMod, J, layoutmsg, cyclenext
+bind = $mainMod, K, layoutmsg, cycleprev
+bind = $mainMod SHIFT, J, layoutmsg, swapnext
+bind = $mainMod SHIFT, K, layoutmsg, swapprev
+# Floating behaviour
+bind = $mainMod, V, togglefloating,
 
-### Resize ###
-bind = $mainMod, E, submap, resize
+# bind = $mainMod, down, layoutmsg, orientationcycle right left center
+# bind = $mainMod SHIFT, Tab, cyclenext,
+# bind = $mainMod SHIFT, Tab, bringactivetotop,
+
+### RESIZE ###
+bind = $mainMod, r, submap, resize
 submap = resize
 # sets repeatable binds for resizing the active window
 binde =,L,resizeactive,50 0
 binde =,H,resizeactive,-50 0
 binde =,K,resizeactive,0 -50
 binde =,J,resizeactive,0 50
+# Master layout orientation
+bind =,U, layoutmsg, orientationleft
+bind =,O, layoutmsg, orientationright
+bind =,B, layoutmsg, orientationbottom
+bind =,T, layoutmsg, orientationtop
+bind =,C, layoutmsg, orientationcenter
 # use reset to go back to the global submap
 bind=,escape,submap,reset 
 # will reset the submap, which will return to the global submap
@@ -79,23 +157,14 @@ submap=reset
 ### ------ ###
 
 # Move focus with mainMod
-bind = $mainMod, left, layoutmsg, orientationleft
-bind = $mainMod, right, layoutmsg, orientationright
-bind = $mainMod, down, layoutmsg, orientationbottom
-bind = $mainMod, up, layoutmsg, orientationtop
-bind = $mainMod, C, layoutmsg, orientationcenter
 # bind = $mainMod, left, movefocus, l
 # bind = $mainMod, right, movefocus, r
 # bind = $mainMod, down, movefocus, d
 # bind = $mainMod, up, movefocus, u
 
-binde = $mainMod, L, resizeactive, 50 0
-binde = $mainMod, H, resizeactive, -50 0
-bind = $mainMod, J, layoutmsg, cyclenext
-bind = $mainMod, K, layoutmsg, cycleprev
-bind = $mainMod SHIFT, J, layoutmsg, swapnext
-bind = $mainMod SHIFT, K, layoutmsg, swapprev
-
+### Workspaces ###
+bindd = $mainMod, L, Next workspace, workspace, e+1
+bindd = $mainMod, H, Previous workspace, workspace, e-1
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
@@ -120,6 +189,12 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
+# Cycle through applications on active workspace
+bindd = ALT, Tab, Cycle to next window, cyclenext
+bindd = ALT SHIFT, Tab, Cycle to prev window, cyclenext, prev
+bindd = ALT, Tab, Reveal active window on top, bringactivetotop
+bindd = ALT SHIFT, Tab, Reveal active window on top, bringactivetotop
+
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
@@ -132,12 +207,58 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# Volume and Media Control
-bind = , XF86AudioRaiseVolume, exec, pamixer -i 5 
-bind = , XF86AudioLowerVolume, exec, pamixer -d 5 
-bind = , XF86AudioMicMute, exec, pamixer --default-source -m
-bind = , XF86AudioMute, exec, pamixer -t
-bind = , XF86AudioPlay, exec, playerctl play-pause
-bind = , XF86AudioPause, exec, playerctl play-pause
-bind = , XF86AudioNext, exec, playerctl next
-bind = , XF86AudioPrev, exec, playerctl previous
+### Volume and Media Control
+# Only display the OSD on the currently focused monitor
+$osdclient = swayosd-client --monitor "$(hyprctl monitors -j | jq -r '.[] | select(.focused == true).name')"
+
+# Laptop multimedia keys for volume and LCD brightness (with OSD)
+bindeld = ,XF86AudioRaiseVolume, Volume up, exec, $osdclient --output-volume raise
+bindeld = ,XF86AudioLowerVolume, Volume down, exec, $osdclient --output-volume lower
+bindeld = ,XF86AudioMute, Mute, exec, $osdclient --output-volume mute-toggle
+bindeld = ,XF86AudioMicMute, Mute microphone, exec, $osdclient --input-volume mute-toggle
+bindeld = ,XF86MonBrightnessUp, Brightness up, exec, $osdclient --brightness raise
+bindeld = ,XF86MonBrightnessDown, Brightness down, exec, $osdclient --brightness lower
+
+# Requires playerctl
+bindld = , XF86AudioNext, Next track, exec, $osdclient --playerctl next
+bindld = , XF86AudioPause, Pause, exec, $osdclient --playerctl play-pause
+bindld = , XF86AudioPlay, Play, exec, $osdclient --playerctl play-pause
+bindld = , XF86AudioPrev, Previous track, exec, $osdclient --playerctl previous
+
+# Cursor size
+env = XCURSOR_SIZE,24
+env = HYPRCURSOR_SIZE,24
+
+# Force all apps to use Wayland
+env = GDK_BACKEND,wayland,x11,*
+env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_STYLE_OVERRIDE,kvantum
+env = SDL_VIDEODRIVER,wayland
+env = MOZ_ENABLE_WAYLAND,1
+env = ELECTRON_OZONE_PLATFORM_HINT,wayland
+env = OZONE_PLATFORM,wayland
+
+xwayland {
+  force_zero_scaling = true
+}
+
+# Use XCompose file
+env = XCOMPOSEFILE,~/.XCompose
+
+# Fix some dragging issues with XWayland
+windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+### JETBRAINS
+# Fixing popup size issue
+windowrule = size 50% 50%, class:(.*jetbrains.*)$, title:^$,floating:1
+# Fix tab dragging (always have a single space character as their title)
+windowrule = noinitialfocus, class:^(.*jetbrains.*)$, title:^\\s$
+windowrule = nofocus, class:^(.*jetbrains.*)$, title:^\\s$
+
+# Floating windows
+windowrule = float, tag:floating-window
+windowrule = center, tag:floating-window
+windowrule = size 1000 800, tag:floating-window
+windowrule = tag +floating-window, class:(blueberry.py|About)
+
+layerrule = noanim, wofi
