--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,3 +6,5 @@ disable_ligatures always
 map cmd+equal change_font_size  all +1.0
 map cmd+minus change_font_size  all -1.0
 map cmd+0 change_font_size      all 0
+
+background_opacity 0.90
