Make foot default terminal

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,7 +4,7 @@
 source = ~/.config/hypr/monitors.conf
 
 ### PROGRAMS ###
-$terminal = uwsm app -- kitty
+$terminal = uwsm app -- footclient
 $fileManager = dolphin
 $menu = wofi --show drun
 $browser = setsid uwsm app -- brave
@@ -15,14 +15,16 @@ exec-once = uwsm app -- waybar
 exec-once = systemctl --user start hyprpolkitagent # Authentication agent for GUIs
 exec-once = uwsm app -- swaybg -i ~/Pictures/wallpapers/current -m fill
 exec-once = uwsm app -- swayosd-server
-
+exec-once = uwsm app -- foot --server
+exec-once = [workspace 1 silent] $browser
+exec-once = [workspace special:magic silent] $terminal
 
 ### LOOK AND FEEL ###
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
     gaps_in = 5
     gaps_out = 10
-    border_size = 1
+    border_size = 2
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     layout = master
     resize_on_border = false
@@ -34,14 +36,14 @@ general {
 decoration {
     rounding = 10
     rounding_power = 4.0
-    active_opacity = 0.90
+    active_opacity = 0.93
     inactive_opacity = 0.80
     dim_inactive = true
     dim_strength = 0.2
     dim_special = 0.2
     blur {
-        popups = true 
-    } 
+        popups = true
+    }
     shadow {
         enabled = true
         range = 2
@@ -89,7 +91,7 @@ master {
     new_status = master
     orientation = right
     special_scale_factor = 1.0
-    mfact = 0.55
+    mfact = 0.50
     slave_count_for_center_master = 0
 }
 
@@ -176,7 +178,6 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
-
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
@@ -190,10 +191,10 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Cycle through applications on active workspace
-bindd = ALT, Tab, Cycle to next window, cyclenext
-bindd = ALT SHIFT, Tab, Cycle to prev window, cyclenext, prev
-bindd = ALT, Tab, Reveal active window on top, bringactivetotop
-bindd = ALT SHIFT, Tab, Reveal active window on top, bringactivetotop
+bindd = $mainMod, Tab, Cycle to next window, cyclenext
+bindd = $mainMod SHIFT, Tab, Cycle to prev window, cyclenext, prev
+bindd = $mainMod, Tab, Reveal active window on top, bringactivetotop
+bindd = $mainMod SHIFT, Tab, Reveal active window on top, bringactivetotop
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
