--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,4 +7,4 @@ map cmd+equal change_font_size  all +1.0
 map cmd+minus change_font_size  all -1.0
 map cmd+0 change_font_size      all 0
 
-background_opacity 0.90
+mouse_hide_wait -1.0
