Update waybar configuraion

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -9,6 +9,7 @@ $fileManager = dolphin
 $menu = wofi --show drun
 $browser = setsid uwsm app -- brave
 
+
 ### AUTOSTART ###
 exec-once = uwsm app -- mako # Notification daemon.
 exec-once = uwsm app -- waybar
@@ -28,7 +29,7 @@ general {
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     layout = master
     resize_on_border = false
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgba(71CEADed)
     col.inactive_border = rgba(595959aa)
     allow_tearing = false
 }
@@ -255,6 +256,7 @@ windowrule = size 50% 50%, class:(.*jetbrains.*)$, title:^$,floating:1
 # Fix tab dragging (always have a single space character as their title)
 windowrule = noinitialfocus, class:^(.*jetbrains.*)$, title:^\\s$
 windowrule = nofocus, class:^(.*jetbrains.*)$, title:^\\s$
+
 
 # Floating windows
 windowrule = float, tag:floating-window
