Add Syncthing and Logseq

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,7 +14,7 @@ $browser = setsid uwsm app -- brave
 exec-once = uwsm app -- mako # Notification daemon.
 exec-once = uwsm app -- waybar
 exec-once = systemctl --user start hyprpolkitagent # Authentication agent for GUIs
-exec-once = uwsm app -- swaybg -i ~/Pictures/wallpapers/current -m fill
+exec-once = uwsm app -- swaybg -i ~/Pictures/wallpapers/osaka-jade.jpg -m fill
 exec-once = uwsm app -- swayosd-server
 exec-once = uwsm app -- foot --server
 exec-once = [workspace 1 silent] $browser
@@ -42,9 +42,6 @@ decoration {
     dim_inactive = true
     dim_strength = 0.2
     dim_special = 0.2
-    blur {
-        popups = true
-    }
     shadow {
         enabled = true
         range = 2
@@ -55,10 +52,14 @@ decoration {
         enabled = true
         size = 8
         passes = 1
+        popups = true
 
         vibrancy = 0.1696
     }
 }
+
+layerrule = blur, waybar 
+layerrule = ignorezero,waybar
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
