Add ly as login manager

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,21 +4,19 @@
 source = ~/.config/hypr/monitors.conf
 
 ### PROGRAMS ###
-$terminal = uwsm app -- footclient
-$fileManager = dolphin
+$terminal = footclient
+$fileManager = setsid dolphin
 $menu = wofi --show drun
-$browser = setsid uwsm app -- brave
-
+$browser = setsid brave
 
 ### AUTOSTART ###
-exec-once = uwsm app -- mako # Notification daemon.
-exec-once = uwsm app -- waybar
+exec-once = mako # Notification daemon.
+exec-once = waybar
 exec-once = systemctl --user start hyprpolkitagent # Authentication agent for GUIs
-exec-once = uwsm app -- swaybg -i ~/Pictures/wallpapers/osaka-jade.jpg -m fill
-exec-once = uwsm app -- swayosd-server
-exec-once = uwsm app -- foot --server
+exec-once = swaybg -i ~/Pictures/wallpapers/osaka-jade.jpg -m fill
+exec-once = swayosd-server
+exec-once = setsid foot --server
 exec-once = [workspace 1 silent] $browser
-exec-once = [workspace special:magic silent] $terminal
 
 ### LOOK AND FEEL ###
 # https://wiki.hyprland.org/Configuring/Variables/#general
@@ -101,6 +99,10 @@ misc {
     disable_hyprland_logo = true
     disable_splash_rendering  = true
     focus_on_activate = true
+}
+
+cursor { 
+  inactive_timeout = 0.5
 }
 
 ####################
