Update starship prompt

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -257,8 +257,8 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 # Fixing popup size issue
 windowrule = size 50% 50%, class:(.*jetbrains.*)$, title:^$,floating:1
 # Fix tab dragging (always have a single space character as their title)
-windowrule = noinitialfocus, class:^(.*jetbrains.*)$, title:^\\s$
-windowrule = nofocus, class:^(.*jetbrains.*)$, title:^\\s$
+# windowrule = noinitialfocus, class:^(.*jetbrains.*)$, title:^\\s$
+# windowrule = nofocus, class:^(.*jetbrains.*)$, title:^\\s$
 
 
 # Floating windows
