--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -1,6 +1,8 @@
 # -*- conf -*-
 [main]
 include=~/.config/foot/themes/kanagawa-jade
-font=monospace:size=14
+font=monospace:size=16
+selection-target=both
+
 [mouse]
 hide-when-typing=yes
