--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,5 +1,3 @@
-# TODO Figure out tab groups
-
 #### Monitors ####
 source = ~/.config/hypr/monitors.conf
 
@@ -10,13 +8,15 @@ $menu = wofi --show drun
 $browser = setsid brave
 
 ### AUTOSTART ###
+exec-once = hyprpaper
 exec-once = mako # Notification daemon.
 exec-once = waybar
 exec-once = systemctl --user start hyprpolkitagent # Authentication agent for GUIs
-exec-once = swaybg -i ~/Pictures/wallpapers/osaka-jade.jpg -m fill
 exec-once = swayosd-server
 exec-once = setsid foot --server
 exec-once = [workspace 1 silent] $browser
+exec-once = hypridle
+exec-once = sleep 0.3 && /home/daniel/.local/share/dabs/bin/dabs-wallpaper.fish
 
 ### LOOK AND FEEL ###
 # https://wiki.hyprland.org/Configuring/Variables/#general
@@ -118,7 +118,8 @@ bind = $mainMod, T, exec, $terminal
 bind = $mainMod, Q, killactive
 bind = $mainMod, F, fullscreen
 bindd = $mainMod, W, Toggle waybar, exec, pkill -SIGUSR1 waybar
-bindd = $mainMod, B, Browser, exec, $browser
+bindd = $mainMod, B, Browser, exec, $browser 
+bindd = $mainMod, F5, Lock, exec, hyprlock
 
 # Notifications
 bindd = SUPER, COMMA, Dismiss last notification, exec, makoctl dismiss
