--- a/.config/hypr/monitors.conf
+++ b/.config/hypr/monitors.conf
@@ -2,5 +2,4 @@
 # monitor = name, resolution, position, scale, transform, 0
 
 monitor=desc:Samsung Electric Company LC34G55T HNTW600655,3440x1440@144,auto,1
-monitor=desc:BNQ BenQ PD2700U ET53N03984SL0,2560x1440@60,auto,1,transform,1
-
+monitor=desc:BNQ BenQ PD2700U ET53N03984SL0,2560x1440@60,auto,1,transform,1 # vertical 16:9 monitor.
