--- a/.gitconfig
+++ b/.gitconfig
@@ -4,5 +4,5 @@
 [init]
 	defaultBranch = main
 [credential "https://github.com"]
-	helper = !/usr/bin/gh auth git-credential
+	helper = !/opt/homebrew/bin/gh auth git-credential
 
