Create the dabs subdivision

--- a/dot-config/hypr/hyprland.conf
+++ b/dot-config/hypr/hyprland.conf
@@ -16,7 +16,7 @@ exec-once = swayosd-server
 exec-once = setsid foot --server
 exec-once = [workspace 1 silent] $browser
 exec-once = hypridle
-exec-once = sleep 0.3 && /home/daniel/.local/share/dabs/bin/dabs-wallpaper.fish
+exec-once = sleep 0.3 && /home/daniel/.local/share/dabs/bin/dabs-wallpaper
 
 ### LOOK AND FEEL ###
 # https://wiki.hyprland.org/Configuring/Variables/#general
@@ -35,7 +35,7 @@ general {
 decoration {
     rounding = 10
     rounding_power = 4.0
-    active_opacity = 0.93
+    active_opacity = 0.90
     inactive_opacity = 0.80
     dim_inactive = true
     dim_strength = 0.2
@@ -244,6 +244,9 @@ env = MOZ_ENABLE_WAYLAND,1
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 env = OZONE_PLATFORM,wayland
 
+
+env = XDG_MENU_PREFIX,arch-
+
 xwayland {
   force_zero_scaling = true
 }
@@ -266,6 +269,6 @@ windowrule = size 50% 50%, class:(.*jetbrains.*)$, title:^$,floating:1
 windowrule = float, tag:floating-window
 windowrule = center, tag:floating-window
 windowrule = size 1000 800, tag:floating-window
-windowrule = tag +floating-window, class:(blueberry.py|About)
+windowrule = tag +floating-window, class:(blueberry.py|org.kde.kcalc|1Password)
 
 layerrule = noanim, wofi
