Minor change to tmux colors

--- a/dot-config/hypr/hyprland.conf
+++ b/dot-config/hypr/hyprland.conf
@@ -246,6 +246,7 @@ env = OZONE_PLATFORM,wayland
 
 
 env = XDG_MENU_PREFIX,arch-
+env = QT_QPA_PLATFORMTHEME,qt6ct
 
 xwayland {
   force_zero_scaling = true
