--- a/dot-tmux.conf
+++ b/dot-tmux.conf
@@ -38,3 +38,8 @@ bind -n M-Down select-pane -D
 
 # to ensure autoread on vim work
 set-option -g focus-events on
+
+set -g status-style fg=#C1C497,bg=#111C18
+set -g window-status-current-style fg=#111C18,bg=#C1C497
+
+set -g status-right "[#{pane_current_path}] %H:%M %d-%b-%y"
