--- a/dot-config/fontconfig/fonts.conf
+++ b/dot-config/fontconfig/fonts.conf
@@ -24,7 +24,7 @@
       <string>monospace</string>
     </test>
     <edit name="family" mode="assign" binding="strong">
-      <string>IosevkaTerm Nerd Font</string>
+      <string>IosevkaTermSlab Nerd Font</string>
     </edit>
   </match>
 
@@ -38,7 +38,7 @@
   <alias>
     <family>ui-monospace</family>
     <default>
-      <family>monospace</family>
+      <family>Iosevka Nerd Font</family>
     </default>
   </alias>
 
