--- a/dot-config/hypr/hyprland.conf
+++ b/dot-config/hypr/hyprland.conf
@@ -35,8 +35,8 @@ general {
 decoration {
     rounding = 10
     rounding_power = 4.0
-    active_opacity = 0.90
-    inactive_opacity = 0.80
+    active_opacity = 0.93
+    inactive_opacity = 0.83
     dim_inactive = true
     dim_strength = 0.2
     dim_special = 0.2
@@ -270,6 +270,6 @@ windowrule = size 50% 50%, class:(.*jetbrains.*)$, title:^$,floating:1
 windowrule = float, tag:floating-window
 windowrule = center, tag:floating-window
 windowrule = size 1000 800, tag:floating-window
-windowrule = tag +floating-window, class:(blueberry.py|org.kde.kcalc|1Password)
+windowrule = tag +floating-window, class:(blueberry.py|org.kde.kcalc|1Password|org.pulseaudio.pavucontrol)
 
 layerrule = noanim, wofi
