--- a/dot-config/hypr/hyprland.conf
+++ b/dot-config/hypr/hyprland.conf
@@ -56,8 +56,8 @@ decoration {
     }
 }
 
-layerrule = blur, waybar 
-layerrule = ignorezero,waybar
+#layerrule = blur, waybar
+#layerrule = ignorezero,waybar
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
@@ -256,20 +256,20 @@ xwayland {
 env = XCOMPOSEFILE,~/.XCompose
 
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+# windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
 ### JETBRAINS
 # Fixing popup size issue
-windowrule = size 50% 50%, class:(.*jetbrains.*)$, title:^$,floating:1
+# windowrule = size 50% 50%, class:(.*jetbrains.*)$, title:^$,floating:1
 # Fix tab dragging (always have a single space character as their title)
 # windowrule = noinitialfocus, class:^(.*jetbrains.*)$, title:^\\s$
 # windowrule = nofocus, class:^(.*jetbrains.*)$, title:^\\s$
 
 
 # Floating windows
-windowrule = float, tag:floating-window
-windowrule = center, tag:floating-window
-windowrule = size 1000 800, tag:floating-window
-windowrule = tag +floating-window, class:(blueberry.py|org.kde.kcalc|1Password|org.pulseaudio.pavucontrol)
-
-layerrule = noanim, wofi
+# windowrule = float, tag:floating-window
+# windowrule = center, tag:floating-window
+# windowrule = size 1000 800, tag:floating-window
+# windowrule = tag +floating-window, class:(blueberry.py|org.kde.kcalc|1Password|org.pulseaudio.pavucontrol)
+# 
+# layerrule = noanim, wofi
