Fix issues with hypr updates

--- a/dot-config/hypr/hyprpaper.conf
+++ b/dot-config/hypr/hyprpaper.conf
@@ -1,2 +1,11 @@
-preload = ~/Pictures/wallpapers/default
-wallpaper = ,~/Pictures/wallpapers/default
+wallpaper {
+  monitor = DP-1
+  path = /home/daniel/Pictures/wallpapers/ultrawide
+  timeout = 7200
+}
+
+wallpaper {
+  monitor = DP-2
+  path = /home/daniel/Pictures/wallpapers/vertical
+  timeout = 7200
+}
