--- a/dot-config/hypr/hyprland.conf
+++ b/dot-config/hypr/hyprland.conf
@@ -16,7 +16,6 @@ exec-once = swayosd-server
 exec-once = setsid foot --server
 exec-once = [workspace 1 silent] $browser
 exec-once = hypridle
-exec-once = sleep 0.3 && /home/daniel/.local/share/dabs/bin/dabs-wallpaper
 
 ### LOOK AND FEEL ###
 # https://wiki.hyprland.org/Configuring/Variables/#general
@@ -252,24 +251,37 @@ xwayland {
   force_zero_scaling = true
 }
 
-# Use XCompose file
-env = XCOMPOSEFILE,~/.XCompose
 
-# Fix some dragging issues with XWayland
-# windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-
-### JETBRAINS
-# Fixing popup size issue
-# windowrule = size 50% 50%, class:(.*jetbrains.*)$, title:^$,floating:1
-# Fix tab dragging (always have a single space character as their title)
-# windowrule = noinitialfocus, class:^(.*jetbrains.*)$, title:^\\s$
-# windowrule = nofocus, class:^(.*jetbrains.*)$, title:^\\s$
-
-
+windowrule = tag +chromium-based-browser, match:class ((google-)?[cC]hrom(e|ium)|[bB]rave-browser|[mM]icrosoft-edge|Vivaldi-stable|helium)
+windowrule = tag +firefox-based-browser, match:class ([fF]irefox|zen|librewolf)
 # Floating windows
-# windowrule = float, tag:floating-window
-# windowrule = center, tag:floating-window
-# windowrule = size 1000 800, tag:floating-window
-# windowrule = tag +floating-window, class:(blueberry.py|org.kde.kcalc|1Password|org.pulseaudio.pavucontrol)
-# 
-# layerrule = noanim, wofi
+windowrule = float on, match:tag floating-window
+windowrule = center on, match:tag floating-window
+windowrule = size 1000 800, match:tag floating-window
+
+windowrule = tag +floating-window, match:class (blueberry.py|org.kde.kcalc|1Password|org.pulseaudio.pavucontrol)
+windowrule = tag +floating-window, match:class (xdg-desktop-portal-gtk|DesktopEditors|org.gnome.Nautilus), match:title ^(Open.*Files?|Open [F|f]older.*|Save.*Files?|Save.*As|Save|All Files|.*wants to [open|save].*|[C|c]hoose.*)
+
+windowrule = no_screen_share on, match:class ^(1[p|P]assword)$
+windowrule = tag +floating-window, match:class ^(1[p|P]assword)$
+
+# Float Steam
+windowrule = float on, match:class steam
+windowrule = center on, match:class steam, match:title Steam
+windowrule = opacity 1 1, match:class steam
+windowrule = size 1100 700, match:class steam, match:title Steam
+windowrule = size 460 800, match:class steam, match:title Friends List
+windowrule = idle_inhibit fullscreen, match:class steam
+
+# -- TO INSPECT --
+
+# Remove 1px border around hyprshot screenshots
+# layerrule = no_anim on, match:namespace selection
+# Float LocalSend and fzf file picker
+
+# Float LocalSend and fzf file picker
+# windowrule = float on, match:class (Share|localsend)
+# windowrule = center on, match:class (Share|localsend)
+
+# Focus floating DaVinci Resolve dialog windows
+# windowrule = stay_focused on, match:class .*[Rr]esolve.*, match:float 1
